<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.telecombretagne.MainActivity" >

    <item
        android:id="@+id/accueil"
        android:title="@string/accueil"
        app:showAsAction="never"/>
    
	<item
        android:id="@+id/formations"
        android:title="@string/formations"
        app:showAsAction="never">
	
        <menu android:id="@+id/sous_menu_formations">
            <item
                android:id="@+id/formations_fig"
                android:title="@string/formations_fig"
                app:showAsAction="never"/>

            <item
                android:id="@+id/formations_fip"
                android:title="@string/formations_fip"
                app:showAsAction="never"/>
            
            <item
                android:id="@+id/formations_debouches"
                android:title="@string/formations_debouches"
                app:showAsAction="never"/>
                
        </menu>
    </item>

	<item
        android:id="@+id/procedure"
        android:title="@string/procedure"
        app:showAsAction="never">
	
        <menu android:id="@+id/sous_menu_procedure">
            <item
                android:id="@+id/procedure_prepa"
                android:title="@string/procedure_prepa"
                app:showAsAction="never"/>

            <item
                android:id="@+id/procedure_ast"
                android:title="@string/procedure_ast"
                app:showAsAction="never"/>
            
            <item
                android:id="@+id/procedure_fip"
                android:title="@string/procedure_fip"
                app:showAsAction="never"/>
                
        </menu>
    </item>
    
    <item
        android:id="@+id/gerer_notifications"
        android:title="@string/gerer_notifications"
        app:showAsAction="never"/>
    
    <item
        android:id="@+id/contacts"
        android:title="@string/contacts"
        app:showAsAction="never"/>

</menu>
